# SimpleDimple

./: .clang-format  .gitignore  .gitmodules  Assets.cmake  CMakeLists.txt  CMakePresets.json  Dockerfile  ImageDockerfile  InstallRules.cmake  PlatformSettings.cmake  README.md  build_sdl.ps1  build_sdl.sh  devcontainer.json  main.cpp  run_in_docker.sh
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
builder/: Dockerfile
cmake/: InstallRules.cmake  PlatformDependencies.cmake
config/: Assets.cmake  InstallRules.cmake  PlatformDependencies.cmake  RuntimeConfigs.cmake  SDLPlatformSettings.cmake  config.h.in  sdl.h.in
doc/: GameStructure.drawio
docker/builder/: Dockerfile
src/: ComponentMatrix.h  ErrorHandling.cpp  ErrorHandling.h  GameLoop.cpp  GameLoop.h  GameObject.cpp  GameObject.h  GameObjectComponentTypes.h  IGameLoop.h  IGameObject.h  IGameObjectComponent.h  IInputEvent.h  ITexture.h  IWindow.h  InputEvent.h  InputEventPublisher.cpp  InputEventPublisher.h  Logger.cpp  Logger.h  RenderContext.h  RendererComponent.cpp  RendererComponent.h  Texture.cpp  Texture.h  TextureComponent.cpp  TextureComponent.h  TextureMatrixComponent.cpp  TextureMatrixComponent.h  TransformComponent.cpp  TransformComponent.h  Types.h  Window.cpp  Window.h  cppzip.cpp  cppzip.h  logger.cpp  logger.h  main.cpp  sdl_classes.h  sdl_interface.h  (+8 more)
test/experiments/: CMakeLists.txt
test/experiments/multiple_windows/: main.cpp
test/utest/: CMakeLists.txt  Mock.h  TestErrorHandling.cpp  TestGameObject.cpp  TestInputEvent.cpp  TestLogger.cpp  TestMatrix.cpp  TestTransformComponent.cpp  test_main.cpp
tests/utest/: CMakeLists.txt  utests.cpp
